# rustlex

./: .gitmodules  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: codegen.in.rs  rt.rs
src/: dfa.rs
