[package]

name = "rustlex"
version = "0.2.5"
authors = ["Leo Testard <leo.testard@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
description = "Lexical analysers generator for Rust, written in Rust"
homepage = "https://github.com/LeoTestard/rustlex"
repository = "https://github.com/LeoTestard/rustlex"
readme = "README.md"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"

[lib]
name = "rustlex"
crate-type = ["dylib"]
